--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -66,5 +66,10 @@
     </div>
     <button type="submit">Оформить заказ</button>
 </form>
+<footer>
+    <div class="version-info">
+        Версия приложения: <span th:text="${version}"></span>
+    </div>
+</footer>
 </body>
 </html>
