--- a/src/main/resources/templates/checkout.html
+++ b/src/main/resources/templates/checkout.html
@@ -33,5 +33,6 @@
     <p th:text="${message}"></p>
 </div>
 <a href="/?clearOrder=true" class="back-to-menu">Вернуться в меню</a>
+<div th:replace="fragments/footer :: footer"></div>
 </body>
 </html>
